<resources>
    <string name="app_name">First App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go_to_register">Are you already register?</string>
    <string name="log_in">Log In</string>

    <string name="error_email">Email is Required</string>
    <string name="error_password">Password is Required</string>
    <string name="error_name">Name is required</string>
    <string name="logged">Logged In</string>
    <string name="no_match">No Match</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="go_to_log_in">Go to Log In</string>
    <string name="registered">Registered</string>
    <string name="hello_world">Hello_World</string>
    <string name="logout">Logout</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Do you want to delete this item?</string>
    <string name="yes">yes</string>
    <string name="clean_all">Clean All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tasks">My Tasks</string>
    <string name="profile">Profile</string>


</resources>