<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1500dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="40dp"
        >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="40dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/black"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_go_to_register"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/go_to_register"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/transparent"
        />



</LinearLayout>